# graphics-lab

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  main.cpp  main.cpp.bak  makeall.bat
camera/: camera.cpp  camera.h
freetype/: FreetypeManager.cpp  FreetypeManager.h
model/: ObjLoader.cpp  ObjLoader.h
shader/: ShaderLoader.cpp  ShaderLoader.h  projection.fs  projection.vs  shaderBlinnPhong.fs  shaderBlinnPhong.vs  simple.frag  simple.vert  simple.vs  textShader.fs  textShader.vs
